2012-09-12  Leif Walsh  <leif.walsh@gmail.com>

	* tests/io/syscall.c (main): add syscall test, also checks
	filesizes

	* configure.ac: remove parallel-tests, they make it hard to see
	what failed

	* orle/orle-io.c: add lcov annotations

	* orle/orle-io.c (fdopen_dst_src): use dup(2) before fdopen(3) to
	avoid stealing and closing callers' file descriptors

	* tests/unittest.h (expect): use perror for epic failures in tests

2012-09-11  Leif Walsh  <leif.walsh@gmail.com>

	* tests/unittest.h (expect): use a return code that autotools
	understands

	* tests/io/simple.c (main): wrote simple file io test

	* orle/orle.c (orle_decode_bytes): changed API to be easier to use,
	also better error checking

	* orle/orle.h: changed API to be easier to use (streaming)

	* orle/orle-io.c (orle_encode_file): implemented file encode/decode
	(orle_decode_file): implemented file encode/decode

	* orle/orle.h (orle_encode_size_bound): add size bound calculator

	* tests/unittest.h: rewrote unittest framework to collect
	assertions

	* tests/: moved tests into subsystem subdirs, added useless io
	test

	* orle/orle-io.c (orle_encode_fd): wrote file descriptor wrapper
	(orle_decode_fd): wrote file descriptor wrapper
	(orle_encode_file): wrote ineffective file encoder/decoder
	(orle_decode_file): wrote ineffective file encoder/decoder

	* orle/orle-io.h: added file io API

	* tests/simple.c (main): allow for slight growth in bad cases

	* tests/easy.c (main): allow for slight growth in bad cases

	* orle/orle.c (orle_encode_bytes): prevent space doubling with a
	better algorithm
	(orle_decode_bytes): prevent space doubling

	* orle/orle-debug.h (DBG): better debug print format

	* tests/osc.c (main): wrote test to check for bad behavior

	* tests/simple.c (main): change variable name

	* tests/easy.c (main): change variable name

	* Makefile.am (liborle_@ORLE_API_VERSION@_la_CFLAGS): fix flag setting

	* orle/orle.c (orle_encode_bytes): Implemented simple (worst case 2n) encoder